Add individual profile view and API endpoint
Added profiili.html for displaying a single person's profile and api/profile.php for fetching individual person data.

- Updated index.html to include navigation to the profile page.

- Added Postman collection for API testing.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             document.getElementById("kansallisuus").value = h.kansallisuus;
         }
 
+        function profiili(id) {
+            window.location.href = `profiili.html?id=${id}`;
+        }
+
         window.onload = haeHenkilot;
     </script>
 </head>
